# simple-magnum-gui

./: .clangd  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Makefile  README.md  build.sh  conanfile.py  configure.sh  vcpkg-configuration.json  vcpkg.json
assets/: icon.rc  resource_fonts.conf  resource_images.conf  resources.conf
bak/: CMakeLists.txt
bak/imgui/backends/: imgui_impl_sdl2.cpp
cmake/: Deps.cmake  FindImGui.cmake  FindImPlot.cmake  FindMagnumIntegration.cmake  guild.hh.in  guild.in  guildConfig.cmake.in  smg.hh.in  smgConfig.cmake.in  version.hh.in  x64-linux-local.cmake  x64-windows-local.cmake
cmake.deps/: CMakeLists.txt  CMakePresets.json  deps.txt
cmake.deps/cmake/: BuildArmadillo.cmake  Buildjsoncpp.cmake  Buildpybind11.cmake  Buildsuperlu.cmake
cmake.deps/smg/: CMakeLists.txt
cmake.deps/smg/cmake/: BuildCorrade.cmake  BuildMagnum.cmake  BuildMagnumIntegration.cmake  BuildMagnumPlugins.cmake  update_imgui.cmake
dependencies/: CMakeLists.txt
dependencies/magnum-integration/: CMakeLists.txt
dependencies/magnum-integration/magnum/: CMakeLists.txt
dependencies/magnum-integration/magnum/corrade/: CMakeLists.txt
docs/: design.md
examples/: CMakeLists.txt  draw_cube.cpp  draw_triangle.cpp  guibase.cpp  implot_ex.cpp  test_callback.cpp
imgui/: README.md
imgui/.not_git/: FETCH_HEAD  config  index  packed-refs
imgui/.not_git/logs/refs/heads/: master
imgui/.not_git/logs/refs/remotes/origin/: HEAD  master
imgui/.not_git/logs/refs/remotes/upstream/: docking  master
imgui/.not_git/logs/refs/remotes/upstream/features/: demo_input_owner_and_routing  potocpav-newer-lines-2  premake5  range_select  shadows  string_view  tex_round_corners
imgui/.not_git/objects/pack/: pack-1cc814fe94ad3e515dfd187a90e1898fb8f927ed.idx  pack-cc4c85cee586ae27e3222b9d5314c685364d155e.idx
imgui/.not_git/refs/remotes/origin/: master
imgui/.not_git/refs/remotes/upstream/: docking  master
imgui/.not_git/refs/remotes/upstream/features/: demo_input_owner_and_routing  potocpav-newer-lines-2  premake5  range_select  shadows  string_view  tex_round_corners
imgui/.not_git/refs/tags/: v1.00  v1.01  v1.02  v1.03  v1.04  v1.05  v1.06  v1.07  v1.08  v1.09  v1.10  v1.11  v1.12  v1.13  v1.14  v1.15  v1.16  v1.16b  v1.17  v1.18  v1.19  v1.20  v1.30  v1.31  v1.32  v1.33  v1.33b  v1.34  v1.35  v1.36  v1.37  v1.38  v1.40  v1.41  v1.42  v1.43  v1.44  v1.45  v1.46  v1.47  (+60 more)
implot/: README.md
implot/.not_git/: COMMIT_EDITMSG  FETCH_HEAD  config  index  packed-refs
implot/.not_git/logs/: HEAD
implot/.not_git/logs/refs/remotes/origin/: HEAD  master
implot/.not_git/logs/refs/remotes/upstream/: backends  master
implot/.not_git/logs/refs/remotes/upstream/features/: buffer  legend-scroll  neg-time  prevplot  spec  tooltips
implot/.not_git/objects/pack/: pack-12b18b6fa8ccfe2770680513fd3686f6979594f8.idx  pack-12b18b6fa8ccfe2770680513fd3686f6979594f8.pack  pack-3669d67f25224700cbc58f47d61860abdab52985.idx  pack-3669d67f25224700cbc58f47d61860abdab52985.pack
implot/.not_git/refs/heads/: master
implot/.not_git/refs/remotes/upstream/: backends  master
implot/.not_git/refs/remotes/upstream/features/: buffer  legend-scroll  neg-time  prevplot  spec  tooltips
implot/.not_git/refs/tags/: v0.1  v0.10  v0.11  v0.12  v0.14  v0.15  v0.16  v0.2  v0.3  v0.4  v0.5  v0.6  v0.7  v0.8  v0.9
include/: DrawCallback.hh  Events.hpp  GuiBase.hh  GuiConsole.hh  GuiMain.hh  ImGuiExample.hh  ImGuiWrapper.hh  ImPlotWrapper.hh  LuaWrapper.hh  MatlabWrapper.hh  Plotter.hh  RealtimePlot.hh  Statics.hh  WindowWrapper.hh  common.hh  error.hh  guild  guild.hh  log.hh  typedefs.hh
include/bak/: Callbacks.hh  GuiMain.hh  ImGuiExample2.hh  ImGuiWrapper.hh  typedefs.hh
magnum/: README.md
magnum/.not_git/: FETCH_HEAD  config  index  packed-refs
magnum/.not_git/logs/refs/heads/: master
magnum/.not_git/objects/pack/: pack-39f3fb10559c4a0710a45a017c28087b26df6797.idx
magnum/.not_git/refs/heads/: master
matlab/: outputtest.m
rad/: README.md
rad/gui_console/: CMakeLists.txt  main.cpp
rad/guibase/: CMakeLists.txt  draw_cube.cpp  draw_triangle.cpp  guibase.cpp
rad/implot_ex/: implot_ex.cpp
scripts/: build.sh  configure_vcpkg.sh  create_clangd.sh  download_dependencies.sh  gitrecipes.py  install_dependencies.sh  reconfigure.sh  reinstall.sh  update_subdirs.sh
scripts/bak/: install_dependencies.sh
src/: CallbackList.cpp  DrawCallback.cpp  GuiBase.cpp  GuiConsole.cpp  GuiLog.cpp  GuiMain.cpp  ImGuiWrapper.cpp  ImPlotWrapper.cpp  LuaWrapper.cpp  MatlabWrapper.cpp  Plotter.cpp  RealtimePlot.cpp  Statics.cpp  WindowWrapper.cpp  log.cpp
src/bak/: Callbacks.cpp  GuiConsole.cpp  GuiMain.cpp  ImGuiExample.cpp  ImGuiWrapper.cpp  ImPlotWrapper.cpp  RealtimePlot.cpp  Triangle.cpp  WindowWrapper.cpp
templates/: GuildTemplate.cpp  GuildTemplate.hh
test/: CMakeLists.txt  test_implot.cpp  test_implot3d.cpp  test_magnum_application_main.cpp  test_magnum_imgui.cpp  test_maptotexture.cpp  test_mesh_destruction.cpp  test_plotquads.cpp  test_plottris.cpp  test_smg_guibase.cpp  test_smg_guibase_looped.cpp
test/bak/: test_gui_console.cpp
tests/: CMakeLists.txt  test_gui_console.cpp  test_guibase.cpp  test_imgui_demos.cpp  test_implot.cpp  test_implot_example.cpp  test_loadimage.cpp  test_lua_api.cpp  test_magnum_imgui.cpp  test_magnum_implot.cpp  test_magnum_sdl2.cpp  test_magnumintegration.cpp  test_maptotexture.cpp  test_matlab_api.cpp  test_plotquads.cpp  test_plottris.cpp  test_sdl2_opengl3.cpp  test_sdl_window.cpp  test_window_ptr.cpp  test_windowwrapper_resize.cpp
tests/bak/: test_imgui_wrapper.cpp  test_imguiexample.cpp  test_sdl2_opengl3.cpp  test_window_wrapper.cpp
